@@ -152,7 +152,7 @@ DExpr6	*	"2"
 	DCD	0x00000000, 0x0000d18e, 0xffff5f82
 
 	DCD	0x41, 0x61, 0x27, 0x62
-	DCD	0x6261, 0x636261, 0x64636261
+	DCD	0x6162, 0x616263, 0x61626364
 
 	]
 
